<resources>
    <string name="app_name">Orça Fácil - Controle financeiro</string>
    <string name="action_settings">Settings</string>
    <string name="despesa">Despesa</string>
    <string name="conta">Conta</string>
    <string name="receita">Receita</string>
    <string name="orcamento">Orçamento</string>
    <string name="categoria">Categoria</string>
    <string name="periodicidade">Periodicidade</string>
    <string name="moeda">Moeda</string>
    <string name="salvar">Salvar</string>
    <string name="hint_saldo_conta">Informe o saldo inicial</string>
    <string name="hint_nome_conta">Informe o nome para a conta</string>
    <string name="nova_conta">Cadastrar nova conta</string>
    <string name="nome_conta_obrigatorio" >Nome da conta é obrigatório</string>
    <string name="saldo_conta_obrigatorio" >Saldo inicial da conta é obrigatório</string>
    <string name="hint_nome_categoria">Informe um nome para a categoria</string>
    <string name="nova_categoria">Nova categoria</string>
    <string name="categoria_receita">Categoria receita</string>
    <string name="action">Nova</string>
    <string name="nova">Nova</string>
    <string name="ok">Ok</string>
    <string name="cancelar">Cancelar</string>
    <string name="nome_categoria_obrigatorio">Nome da categoria é obrigatório</string>
    <string name="hint_data_receita">Informe a data da receita</string>
    <string name="hint_valor_receita">Informe o valor da receita</string>
    <string name="campo_data_obrigatorio">Data é obrigatória</string>
    <string name="campo_conta_obrigatorio">Conta é obrigatória</string>
    <string name="campo_valor_obrigatorio">Valor é obrigatório</string>
    <string name="receita_salva">Receita salva com sucesso</string>
    <string name="hint_data_orcamento">Informe a data do orçamento</string>
    <string name="hint_valor_orcamento">Informe o valor do orcamento</string>
    <string name="orcamento_salvo">Orçamento salvo com sucesso</string>
    <string name="categoria_despesa">Categoria despesa</string>
    <string name="categoria_id">categoria_id</string>
    <string name="categoria_drawable_id">categoria_drawable_id</string>
    <string name="hint_data_fim_orcamento">Informe a validade do orçamento</string>
    <string name="data_fim_orcamento_obrigatorio">Data de validade do orçamento é obrigatória</string>
    <string name="despesa_salva">Despesa salva com sucesso</string>
    <string name="hint_data_despesa">Informe a data da despesa</string>
    <string name="hint_valor_despesa">Informe o valor da despesa</string>
    <string name="hint_detalhe_despesa">Informe detalhes adicionais caso deseje</string>
    <string name="saldo_restante_orcamento">Saldo Restante: </string>
    <string name="campo_valor_zerado">O valor precisa ser maior que zero</string>
    <string name="saldo">Saldo</string>
    <string name="valor">Valor</string>
    <string name="cartao_de_credito">Cartão de Crédito</string>
    <string name="cartao_salvo">Cartão de crédito salvo com sucesso</string>
    <string name="campo_ultimos_quatro_digitos_obrigatorio">É necessário informar os quatro últimos dígitos do cartão para fazer o cadastro</string>
    <string name="hint_ultimos_quatro_digitos">Informe os quatro ultimos digitos do cartão</string>
    <string name="fatura">Fatura</string>
    <string name="alterar">Alterar</string>
    <string name="excluir">Excluir</string>
    <string name="fatura_salva">Fatura salva com sucesso</string>
    <string name="hint_data_inicio_ciclo">Informe a data do inicio do ciclo da fatura</string>
    <string name="hint_data_final_ciclo">Informe a data final do ciclo da fatura</string>
    <string name="hint_data_vencimento">Informe a data de vencimento da fatura</string>
    <string name="hint_valor_fatura">Informe o valor da fatura</string>
    <string name="data_inicio_ciclo_obrigatorio">O campo data ínicio do ciclo é obrigatório</string>
    <string name="data_final_ciclo_obrigatorio">O campo data final do ciclo é obrigatório</string>
    <string name="data_vencimento_obrigatorio">O campo data de vencimento é obrigatório</string>
    <string name="adicionar_fatura">Adicionar fatura</string>
    <string name="lista_faturas">Listar faturas</string>
    <string name="listar">Listar</string>
    <string name="despesa_cartao">Despesa do Cartão</string>
    <string name="despesa_cartao_salva">Despesa do cartão salva com sucesso</string>
    <string name="hint_quantidade_parcelas">Informe a quantidade de parcelas</string>
    <string name="parcelada">Parcelada</string>
    <string name="campo_quantidade_parcelas_obrigatorio">O campo quantidade de parcelas é obrigatório para despesa parcelada</string>
    <string name="adicionar_despesa_cartao">Adicionar despesa cartão</string>
    <string name="lista_despesa_cartao">Listar despesas</string>
    <string name="saldo_conta">Saldo da conta:</string>
    <string name="receitas_despesas_mes_atual">Receitas/Despesas mês atual</string>
    <string name="cartoes">Cartões de Crédito</string>
    <string name="faturas">Faturas</string>
    <string name="contas">Contas</string>
    <string name="receitas">Receitas: </string>
    <string name="despesas">Despesas: </string>
    <string name="hint_quantidade_repeticoes">Informe a quantidade de repetições</string>
    <string name="data_binding">Data binding</string>
    <string name="orcamento_erro_salvar">Erro ao salvar orçamento</string>
    <string name="campo_categoria_obrigatorio">Campo categoria é obrigatório</string>

</resources>
