<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:src="@drawable/sem_imagem"
            android:layout_marginBottom="20dp"
            android:id="@+id/despesa_cartao_form_categoria"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/despesa_cartao_form_fatura"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/despesa_cartao_form_saldo_restante"
            />


        <EditText
            android:id="@+id/despesa_cartao_form_data"
            android:inputType="date"
            android:digits="0123456789/"
            android:maxLength="10"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_data_despesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="8"
            android:digits="0123456789,."
            android:inputType="numberDecimal"
            android:hint="@string/hint_valor_despesa"
            android:id="@+id/despesa_cartao_form_valor"
            android:layout_marginBottom="20dp"
            />

        <EditText
            android:id="@+id/despesa_cartao_form_detalhes"
            android:layout_marginBottom="20dp"
            android:hint="@string/hint_detalhe_despesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/parcelada"
            android:id="@+id/despesa_cartao_form_parcelada"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="2"
            android:digits="0123456789"
            android:inputType="number"
            android:hint="@string/hint_quantidade_parcelas"
            android:id="@+id/despesa_cartao_form_quantidade_parcelas"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:layout_alignParentBottom="true"
            android:text="@string/salvar"
            android:id="@+id/btn_salvar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
