<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:src="@drawable/sem_imagem"
            android:layout_marginBottom="20dp"
            android:id="@+id/receita_form_categoria"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Spinner
            android:layout_marginBottom="20dp"
            android:id="@+id/receita_form_conta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/receita_form_data"
            android:inputType="date"
            android:maxLength="10"
            android:hint="@string/hint_data_receita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:digits="0123456789.,"
            android:inputType="numberDecimal"
            android:id="@+id/receita_form_valor"
            android:hint="@string/hint_valor_receita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <Button
        android:layout_alignParentBottom="true"
        android:text="@string/salvar"
        android:id="@+id/btn_salvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
